# TinyAgent

./: .gitignore  Example.py  README.md  pipline.py  pyproject.toml  requirements.txt
Agent/: __init__.py  agent_core.py
Agent/Core/: agent_core.py
Agent/Memory/: Container.py  compression.py
Agent/core/: agent_core.py
Agent/prompts/: PromptHandler.py  inquery_prompt.py  prompt_react.py  tools_prompt.py  web_tools_prompt.py  word_tools_prompt.py
Agent/request/: api.py
Agent/tools/: File_tools.py  System_tools.py  Tools.py  Web_tools.py  docs_tools.py  inquery_tool.py
Agent/utils/: logging.py  parser.py
Memory（Gen by Agent）/: README.md  __init__.py  conversation_store.py  memory_manager.py  memory_utils.py  thought_chain.py  usage_example.py
Model/: pipline.py
Model/API/: api_genResponse.py
Model/Configuration/: Pipeline_config.py
Model/LLM/: convsManagement.py  pipeline.py
llmApi/API/: api_genResponse.py
llmApi/LLM/: pipeline.py
llmApi/Prompts/: Describe.md  prompt_react.md
