[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyagent"                
version = "0.1.0"
description = "TinyAgent package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["python-docx>=1.2.0", "httpx>=0.28.1", "openai>=2.5.0", "bs4>=0.0.2"]

[tool.setuptools.packages.find]
include = ["Agent*"]